fixgap

--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
     justify-content: center;
     flex-direction: column;
     font-weight: 900;
-    color: #444;
+    color: #445; 
     background-color: beige;
 }
 
